force-app/zurich-base/main/default/objects/User/fields/ActiveAgent__c.field-meta.xml
<CustomField>
    <fullName>ActiveAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activa y desactiva los usuarios para el calculo de la asignación de casos sin gestor preferente</description>
    <inlineHelpText>Activa y desactiva los usuarios para el calculo de la asignación de casos sin gestor preferente</inlineHelpText>
    <label>Active Agent</label>
    <type>Checkbox</type>
</CustomField>