force-app/zurich-base/main/default/objects/User/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USP</fullName>
            </value>
            <value>
                <fullName>Grandes Pymes</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>