force-app/zurich-base/main/default/objects/User/fields/AssignedCases__c.field-meta.xml
<CustomField>
    <fullName>AssignedCases__c</fullName>
    <description>Cuenta cuantos casos tiene el agente asignados</description>
    <inlineHelpText>Indica cuantos casos asignados tiene el agente</inlineHelpText>
    <label>Assigned Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>