force-app/zurich-base/main/default/objects/User/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Límite de gestión de casos que se le asigna a un usuario del tipo Agente</description>
    <inlineHelpText>Límite de gestión de casos que se le asigna a un usuario del tipo Agente</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>