force-app/zurich-base/main/default/objects/User/fields/ContactAccountId__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountId__c</fullName>
    <description>Id de la Cuenta vinculada al Contacto de Usuario</description>
    <formula>CASESAFEID(Contact.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>