force-app/zurich-base/main/default/objects/User/fields/IAM_Role__c.field-meta.xml
<CustomField>
    <fullName>IAM_Role__c</fullName>
    <description>Rol de IAM del usuario. Es un campo interno informativo, para identificación de roles y gestión de incidencias.</description>
    <label>IAM Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>