force-app/zurich-base/main/default/objects/User/fields/IsZESupervisor__c.field-meta.xml
<CustomField>
    <fullName>IsZESupervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if user is a supervisor in Zurich Empresas (ZE)</description>
    <label>Is ZE supervisor</label>
    <type>Checkbox</type>
</CustomField>