force-app/zurich-base/main/default/objects/User/fields/License_Group__c.field-meta.xml
<CustomField>
    <fullName>License_Group__c</fullName>
    <label>License Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>