force-app/zurich-base/main/default/objects/User/fields/Notified__c.field-meta.xml
<CustomField>
    <fullName>Notified__c</fullName>
    <formula>IF( NotifyDate__c  =  TODAY(), true, false)</formula>
    <label>Notified</label>
    <type>Checkbox</type>
</CustomField>