force-app/zurich-base/main/default/objects/User/fields/NotifyDate__c.field-meta.xml
<CustomField>
    <fullName>NotifyDate__c</fullName>
    <label>Notify Date</label>
    <type>Date</type>
</CustomField>