force-app/zurich-base/main/default/objects/User/fields/NotifyType__c.field-meta.xml
<CustomField>
    <fullName>NotifyType__c</fullName>
    <label>Notify Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaña</fullName>
            </value>
            <value>
                <fullName>Salto de tramo</fullName>
            </value>
            <value>
                <fullName>Formación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>