force-app/zurich-base/main/default/objects/User/fields/OnVacation__c.field-meta.xml
<CustomField>
    <fullName>OnVacation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Vacation</label>
    <type>Checkbox</type>
</CustomField>