force-app/zurich-base/main/default/objects/User/fields/QueuesView__c.field-meta.xml
<CustomField>
    <fullName>QueuesView__c</fullName>
    <label>QueuesView</label>
    <length>255</length>
    <type>Text</type>
</CustomField>