force-app/zurich-base/main/default/objects/User/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>