force-app/zurich-base/main/default/objects/User/fields/RoutingTeam__c.field-meta.xml
<CustomField>
    <fullName>RoutingTeam__c</fullName>
    <label>RoutingTeam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipo_Enrutamiento</valueSetName>
    </valueSet>
</CustomField>