force-app/zurich-base/main/default/objects/User/fields/TypeToNotify__c.field-meta.xml
<CustomField>
    <fullName>TypeToNotify__c</fullName>
    <label>Type To Notify</label>
    <length>80</length>
    <type>Text</type>
</CustomField>