force-app/zurich-base/main/default/objects/User/validationRules/Active_Agente_Inactivo.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Agente_Inactivo</fullName>
    <active>true</active>
    <description>No se puede quedar el campo Active Agente activo si al usuario se da de baja</description>
    <errorConditionFormula>AND(
OR(
ISCHANGED(ActiveAgent__c),
ActiveAgent__c == true,
IsActive == false
),
$Profile.Id &lt;&gt; &apos;00e5I000000Hu97&apos;,
$Profile.Id &lt;&gt; &apos;00e5I000000UPld&apos;,
$Profile.Id &lt;&gt; &apos;00e5I000000QeQS&apos;

)</errorConditionFormula>
    <errorMessage>Si el Usuario está inactivo no puede tener la casilla Agente Activo marcada</errorMessage>
</ValidationRule>