force-app/zurich-base/main/default/objects/User/validationRules/Capacidad_negativa.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacidad_negativa</fullName>
    <active>true</active>
    <description>La capacidad de asumir casos no puede ser cero ni negativa</description>
    <errorConditionFormula>!ISBLANK(Capacity__c )  &amp;&amp;  Capacity__c &lt;= 0</errorConditionFormula>
    <errorMessage>La capacidad del gestor no puede ser cero ni negativa</errorMessage>
</ValidationRule>